tests/baselines/reference/conditionalExpression1.errors.txt
==== tests/cases/compiler/conditionalExpression1.ts (1 errors) ====
    var x: boolean = (true ? 1 : ""); // should be an error
                      ~~~~~~~~~~~~~
!!! conditionalExpression1.ts(1,19): error TS2226: No best common type exists between 'number' and 'string'.